favourite tab added

--- a/app/src/main/res/navigation/nav_map.xml
+++ b/app/src/main/res/navigation/nav_map.xml
@@ -23,7 +23,11 @@
         android:id="@+id/favourite"
         android:name="com.example.retrofitdemo.fragments.favourite.Favourite"
         android:label="fragment_favourite"
-        tools:layout="@layout/fragment_favourite" />
+        tools:layout="@layout/fragment_favourite" >
+        <action
+            android:id="@+id/action_favourite_to_chart"
+            app:destination="@id/chart" />
+    </fragment>
     <fragment
         android:id="@+id/demoAccount"
         android:name="com.example.retrofitdemo.fragments.demoAccount.DemoAccount"
@@ -42,5 +46,8 @@
         <action
             android:id="@+id/action_chart_to_home2"
             app:destination="@id/home2" />
+        <action
+            android:id="@+id/action_chart_to_favourite"
+            app:destination="@id/favourite" />
     </fragment>
 </navigation>
