--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -58,6 +58,17 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/add_to_favorite"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="70dp"
+                android:layout_marginEnd="30dp"
+                android:src="@drawable/ic_baseline_favorite_empty_color"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
@@ -88,35 +99,35 @@
             android:id="@+id/day"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:text="1 D"
+            android:text="@string/_1_d"
             style="?attr/materialButtonOutlinedStyle"
             />
         <Button
             android:id="@+id/week"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:text="1 W"
+            android:text="@string/_1_w"
             style="?attr/materialButtonOutlinedStyle"
             />
         <Button
             android:id="@+id/month"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:text="1 M"
+            android:text="@string/_1_m"
             style="?attr/materialButtonOutlinedStyle"
             />
         <Button
             android:id="@+id/year"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:text="1 Y"
+            android:text="@string/_1_y"
             style="?attr/materialButtonOutlinedStyle"
             />
         <Button
             android:id="@+id/all"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
-            android:text="ALL"
+            android:text="@string/all"
             style="?attr/materialButtonOutlinedStyle"
             />
     </com.google.android.material.button.MaterialButtonToggleGroup>
